removed personal mentions

--- a/tg_bot/elevated_users.json.sample
+++ b/tg_bot/elevated_users.json.sample
@@ -1,6 +1,6 @@
 {
-    "devs": [1191438732],
-    "supports": [1191438732],
-    "whitelists": [1191438732],
-    "sudos": [1191438732]
+    "devs": [],
+    "supports": [],
+    "whitelists": [],
+    "sudos": []
 }
